config/cache.yaml
---
# make Redis service available to other pods in the same namespace
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: doodle
  labels:
    app: cache
spec:
  ports:
    - port: 6379
      name: redis-stack
    - port: 6378
      name: redis-core
  clusterIP: None
  selector:
    app: cache

---
# deployment blueprint for stateful set: init containers and reserve/mount volumes
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stack
  namespace: doodle
spec:
  serviceName: "redis-service"
  replicas: 2
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: redis
        image: redis/redis-stack-server:latest
        ports:
        - containerPort: 6379
          name: redis-stack
        - containerPort: 6378
          name: redis-core
        command:
          - redis-stack-server
          - "/etc/redis-config.conf"
        volumeMounts:
        - name: redis-data
          mountPath: /var/lib/redis-stack
        - name: redis-claim
          mountPath: /etc
      volumes:
      - name: config-map
        configMap:
          name: redis-configuration
  volumeClaimTemplates:
  - metadata:
      name: redis-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
