config/server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dd-server
  namespace: doodle
  labels:
    app: server
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: server
    tier: backend
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dd-server
  namespace: doodle
  labels:
    app: server
spec:
  selector:
    matchLabels:
      app: server
      tier: backend
  template:
    metadata:
      labels:
        app: server
        tier: backend
    spec:
      containers:
      - image: zekissel/dd-server:latest
        name: dd-server
        ports:
        - containerPort: 8000
          name: server-port
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
        volumeMounts:
        - mountPath: /var/www/html
          name: dd-pv-claim
      volumes:
      - name: dd-pv-claim
        persistentVolumeClaim:
          claimName: dd-pv-claim
